# AmiVerse

./: .gitignore  LICENSE  README.md  app.js  app.json  index.js  package-lock.json  package.json  server.js
Navigation/: BottomTabNavigator.js
api/: functions.js
app/: _layout.js  all_courses.js  home.js  homepage.js  index.js  login.js  settings.js
apps/: README.md  app.json  bapel.config.js  index.js
components/: AllCoursesCard.jsx  SchCard.jsx  ScheduleCard.jsx  Username.jsx  timetable.jsx
constants/: colors.js  config.js  fonts.js
controllers/: functions.js
server/: main.py  makefile  pyproject.toml
server/controllers/: rpc_calls.py
server/util/: env.py
styles/: AllCourses.js  Login.js  Timetable.js  username.js
